# PCL-RTAB-Autonomous-Vehicle

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/point_cloud_processing/lib/point_cloud_processing/: circle_cloud  filter_segment  pcd_import  plane_cloud  point_path_draw
install/point_cloud_processing/share/point_cloud_processing/: local_setup.sh  package.sh
install/point_cloud_processing/share/point_cloud_processing/cmake/: point_cloud_processingConfig.cmake
install/ros2_kitti_publishers/lib/ros2_kitti_publishers/: kitti_publishers
install/ros2_kitti_publishers/share/ament_index/resource_index/parent_prefix_path/: ros2_kitti_publishers
install/ros2_kitti_publishers/share/ros2_kitti_publishers/: local_setup.sh  package.sh
install/ros2_kitti_publishers/share/ros2_kitti_publishers/cmake/: ros2_kitti_publishersConfig.cmake
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.sh  package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
log/: latest_build
src/point_cloud_processing/: CMakeLists.txt  package.xml
src/point_cloud_processing/launch/: process_kitti.launch.py  rtab_mapping.launch.py
src/point_cloud_processing/point_clouds/: circular.pcd  pass_x_cloud.pcd  plane.pcd  voxel_cloud.pcd
src/point_cloud_processing/rviz/: kitti_viz.rviz
src/point_cloud_processing/src/: circular_cloud.cpp  filtering_segmentation.cpp  point_path_drawing.cpp  table_scene.cpp
src/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
